2017-06-22 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-25: For each package create python/package/__init__.py to
	avoid picking package/python files from release

2017-05-09 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-24: Bug fix creation of python __init__.py build rules.
	Previously there was chance that two process can write in the same file at
	same time causing it to be a invalid python file.

2017-04-11 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-23: Dump build product to source map file.

2017-02-13 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-22: Fixes the bug when there is only <test /> in package/test/BuildFile
	then gmake was running runtests for that at build time.

2017-01-18 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-21: Fixed for compile_commands.json
	  - delete compile_commands.json when scram build clean is run
	  - Do not copy contents of release/compile_commands.json in to dev area
	    as the file and directory will not be pointing to correct path.
	  - For patch releases, concatenate release/compile_commands.json and
	    local compile_commands.json
	  Fixes for compiler variables: Apply USER_REM_FLAG flags on all flags.
	  Allow USER_PRE_Flags to be put in front of scram compilers flags.

2016-12-14 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-20: Do not include makefile fragments for the deleted packages from
	release area.

2016-12-09 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-19: Bug fix; create python link when scram build <papckage name> rule is run
	* llvm-ccdb: Add full path of file name in compile_commands.json to avoid crash

2016-12-02 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-18:
	* Remove intel-vtune ref as tool is replaced by ittnotify
	* Rename llvm-ccdb.json to compile_commands.json which is automatically
	searched by clang-tidy

2016-11-25 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-17: Do not symlink intel-vtune.